network/02.HA-endPoint.yaml
apiVersion: v1
kind: Service
metadata: 
  name: ha-external-ip-service
  namespace: network
spec:
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
---

apiVersion: v1
kind: Endpoints
metadata:
  name: ha-external-ip-service
  namespace: network
subsets:
  - addresses:
      - ip: ${HA_IP}
    ports: 
      - port: 8123
        protocol: TCP
