network/03.casaos-endPoint.yaml
apiVersion: v1
kind: Service
metadata: 
  name: casaos-external-ip-service
  namespace: proxy
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---

apiVersion: v1
kind: Endpoints
metadata:
  name: casaos-external-ip-service
  namespace: proxy
subsets:
  - addresses:
      - ip: ${CASA_OS_IP}
    ports: 
      - port: 80
        protocol: TCP
